add opportunity to comment comments
